# spork

./: Cargo.toml  LICENSE  README.md
docs/: config.md  defines.md  main.md
src/: build.rs  error.rs  init.rs  main.rs  project.rs  targets.rs  util.rs  workspace.rs
template/: .clang-format
