[package]
name = "spork"
description = "Opinionated C/C++ build system"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
regex = "1.8.1"
toml = "0.7.3"
yansi = "0.5.1"

[dependencies.clap]
version = "4.2.7"
features = ["derive"]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.git2]
version = "0.17.1"
features = []
